# overcast-to-sqlite

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
.github/workflows/: lint.yml  publish.yml  test.yml
demos/: changelog.py  overcast-wrapped-2023.html
overcast_to_sqlite/: chapters.py  chapters_backfill.py  cli.py  constants.py  datastore.py  episode.py  exceptions.py  feed.py  models.py  more_itertools.py  overcast.py  utils.py
overcast_to_sqlite/chapters/: chapters.py  entities.py  extractors.py
overcast_to_sqlite/html/: episode.html  htmltagfixer.py  index.html  mvp.css  page.py  search.js  test.html
tests/: test_auth.py  test_cli.py  test_datastore.py  test_get.py  test_html.py  test_opml.py  test_retention.py  test_save.py
