[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
wheel-exclude = ["**/.mypy_cache", "**/.DS_Store"]

[project]
name = "overcast-to-sqlite"
version = "1.0.0"
description = "Save listening history and feed/episode info from Overcast to a SQLite database."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.14"
authors = [
    { name = "Harold Martin", email = "Harold.Martin@gmail.com" },
]
keywords = ["datasette", "overcast", "sqlite", "podcasts", "podcast", "transcripts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Datasette",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
    "podcast-chapter-tools>=0.1.0",
    "python-dateutil>=2.8.0",
    "requests>=2.28.0",
    "sqlite-utils>=3.30",
]

[project.scripts]
overcast-to-sqlite = "overcast_to_sqlite.cli:cli"

[project.urls]
Homepage = "https://github.com/hbmartin/overcast-to-sqlite"
Repository = "https://github.com/hbmartin/overcast-to-sqlite"
Issues = "https://github.com/hbmartin/overcast-to-sqlite/issues"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "lizard>=1.21.2",
    "pyrefly>=0.56.0",
    "pyroma>=5.0.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "requests-mock>=1.12.1",
    "ruff>=0.12.7",
    "ty>=0.0.23",
    "types-python-dateutil>=2.9.0.20250708",
    "types-requests>=2.32.4.20250611",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "setup.py", "site-packages", "venv"]

# Same as Black.
line-length = 88
indent-width = 4
target-version = "py314"

lint.select = ["ALL"]
lint.ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107", "D203", "D213", "ICN001", "S608", "S113", "S311", "S314", "T201"]

[tool.ruff.lint.per-file-ignores]
"overcast_to_sqlite/cli.py" = ["FBT001"]
"overcast_to_sqlite/more_itertools.py" = ["RET505", "EM101", "TRY003", "ANN202", "D415", "D400", "ANN001", "FBT002", "ANN201"]
"overcast_to_sqlite/episode.py" = ["SIM102"]
"overcast_to_sqlite/html/htmltagfixer.py" = ["ANN001", "ANN201", "ANN204"]
"overcast_to_sqlite/models.py" = ["N815"]
"tests/*" = ["ANN001", "ANN201", "ARG001", "INP001", "PTH123", "PTH208", "PT001", "PT006", "PT007", "RET504", "S101", "SIM115", "SIM300"]

[tool.ruff.format]
# Same as Black.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
